Segundo commit no githubpages ajustando a pagina

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title><em>EXEMPLO DEPLOY GITHUB PAGES</em></title>
     </head>
-    <body>
+    <body bgcolor="green"
         <center>
             <h1>
                 DEPLOY EM GITHUB PAGES
@@ -15,6 +15,6 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
         incidunt explicabo possimus soluta error natus est labore, vero nisi id
         laborum, aperiam non quia magnam placeat cumque quo adipisci impedit!
-        
+
     </body>
 </html>
